<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <Button
        android:id="@+id/btnUploadPhoto"
        android:layout_width="115dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/UploadPhoto"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/ivPostImage"
        app:layout_constraintTop_toBottomOf="@+id/btnTakePhoto" />

    <Button
        android:id="@+id/btnTakePhoto"
        android:layout_width="115dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/TakePhoto"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/ivPostImage"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="147dp"
        android:layout_height="138dp"
        android:layout_margin="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="100dp"
        android:layout_height="38dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="116dp"
        android:background="@drawable/login_buttons"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/Post"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/tvCaption"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/Description"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPostImage" />

    <EditText
        android:id="@+id/tvLocation"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="8dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="City, State"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCaption" />

    <EditText
        android:id="@+id/etAboutMe"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/About"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvLocation" />

    <EditText
        android:id="@+id/etBudget"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/BudgetRent"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAboutMe" />

    <ImageButton
        android:id="@+id/minStay"
        android:layout_width="59dp"
        android:layout_height="78dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBudget"
        app:srcCompat="@drawable/ic_baseline_calendar_today_24" />

    <TextView
        android:id="@+id/tvMinStay"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/AMD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBudget" />

    <EditText
        android:id="@+id/availableDate"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/availableDate"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBudget" />

    <View
        android:id="@+id/divider3"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="44dp"
        android:background="#575656"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/availableDate" />

</androidx.constraintlayout.widget.ConstraintLayout>